--- a/nextjs/tsconfig.json
+++ b/nextjs/tsconfig.json
@@ -22,6 +22,6 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "lib/session.js", "pages/api/login.js", "pages/index.js"],
   "exclude": ["node_modules"]
 }
